--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>EUJEONG's HBD</title>
+        <title>요조숙녀 더비의 생일</title>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="https://jeondaye.github.io/btd_event/style.css">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
