--- a/webcam.html
+++ b/webcam.html
@@ -17,8 +17,8 @@
             <div class="templete blind">
                 <img src="//:0" alt="" id="camera--output">
                 <div class="btd_txt blind">
-                    <p>🎂  22.11.04 🎂</p>
-                    <p>🥳 HAPPY 27th BIRTHDAY 🥳</p>
+                    <p>🎂  24.04.26 🎂</p>
+                    <p>🥳 HAPPY BIRTHDAY 🥳</p>
                 </div>
             </div>
 
