--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section id="menu">
                 <div class="menu_area">
                     <button type="button" id="cardpop" title="menu1"><i class='bx bx-cake'></i><span class="menu_txt">생일카드 보기</span></button>
-                    <button type="button" title="menu2" onclick="location.href='https://jeondaye.github.io/btd_event/webcam.html'"><i class='bx bxs-cake' ></i><span class="menu_txt">기념촬영하기</span></button>
+                    <button type="button" title="menu2" onclick="location.href='https://kosmoszzang.github.io/hbd_0426/'"><i class='bx bxs-cake' ></i><span class="menu_txt">기념촬영하기</span></button>
                 </div>
                 <div id="modal"></div>
                 <div id="card_cont">
