--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <section id="logo">
                 <img src="https://jeondaye.github.io/btd_event/images/hbd_cake.png" alt="케이크">
             </section>  
+            <h2>생일축하해 ꒰ᐢ. .ᐢ꒱</h2>
             <section id="menu">
                 <div class="menu_area">
                     <button type="button" id="cardpop" title="menu1"><i class='bx bx-cake'></i><span class="menu_txt">생일카드 보기</span></button>
