--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                     <button type="button" id="close_button" class="close_button" title="close"><i class='bx bx-x'></i></button>
                 </div>
             </section>
-            <section id="content">
+<!--             <section id="content">
                 <div class="" style="opacity: 0;"><img src="https://jeondaye.github.io/btd_event/images/logo.png" width="250" alt=""><img src="https://jeondaye.github.io/btd_event/images/logo.png" width="250" alt=""></div>
                 <div class="img1 ani"><img src="https://jeondaye.github.io/btd_event/images/logo_neon.png" alt=""></div>
                 <div class="img1"><img src="https://jeondaye.github.io/btd_event/images/logo_neon1.png" alt=""></div>
-            </section>
+            </section> -->
         </div>
         <script type="text/javascript">
             $(document).ready(function() {
